[#91] refactor: run tests only if native codec is available