@@ -21,4 +21,16 @@
       <artifactId>jakarta.annotation-api</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens de.bmarwell.proximo.pitido.codecs.sip/de.bmarwell.proximo.pitido.codecs.sip.extension=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
